--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -155,8 +155,8 @@ sphinxdir = $(builddir)/sphinx
 
 # Documentation sources.
 DOCFILES = changes.rst diagnostics.rst editors.rst ifm2dev.rst ifm2tex.rst \
-index.rst intro.rst language.rst license.rst maps.rst scr2ifm.rst	   \
-solving.rst tkifm.rst tools.rst usage.rst
+ifm2web.rst index.rst intro.rst language.rst license.rst maps.rst	   \
+scr2ifm.rst solving.rst tkifm.rst tools.rst usage.rst
 
 
 # Programs.
@@ -164,7 +164,7 @@ SPHINX = $(OPTIONAL) sphinx-build -N -d $(sphinxdir) $(SPHINXOPTS)
 OPTIONAL = $(top_srcdir)/etc/missing --run
 
 # Distribution stuff.
-EXTRA_DIST = $(DOCFILES) examples templates logo.png
+EXTRA_DIST = $(DOCFILES) examples images templates
 IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
 IFMOPTS = -I $(top_srcdir)/lib -s version="$(VERSION)" -S helvetica
 docdir = $(prefix)/doc
@@ -349,8 +349,10 @@ latex: setup conf.py
 linkcheck: setup conf.py
 	$(SPHINX) -b $@ $(srcdir) $(sphinxdir)
 
-setup:;	@ mkdir -p $(htmldir) $(latexdir) $(sphinxdir)
-	@ for file in conf.py logo.png; do				\
+setup:
+	@ mkdir -p $(htmldir) $(latexdir) $(sphinxdir)
+	@ cd $(srcdir)/images; $(MAKE) -s
+	@ for file in conf.py images/logo.png; do			\
 	    path=$(builddir)/$$file;					\
 	    test -f $$path || ln -s $(srcdir)/$$file $$path;		\
 	done
