--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -152,6 +152,8 @@ builddir = $(top_builddir)/doc
 htmldir = $(builddir)/html
 latexdir = $(builddir)/latex
 sphinxdir = $(builddir)/sphinx
+imagedir = $(srcdir)/images
+exampledir = $(srcdir)/examples
 
 # Documentation sources.
 DOCFILES = changes.rst diagnostics.rst editors.rst ifm2dev.rst ifm2tex.rst \
@@ -163,8 +165,16 @@ scr2ifm.rst solving.rst tkifm.rst tools.rst usage.rst
 SPHINX = $(OPTIONAL) sphinx-build -N -d $(sphinxdir) $(SPHINXOPTS)
 OPTIONAL = $(top_srcdir)/etc/missing --run
 
+# Generated images.
+EXAMPLES = $(wildcard ${exampledir}/*.ifm)
+TMP = $(subst ${exampledir},${imagedir},${EXAMPLES})
+PNG = $(subst .ifm,.png,${TMP})
+IFM2WEB = perl $(top_srcdir)/progs/ifm2web.pl -S helvetica
+LARGE = $(IFM2WEB) -z 3 -s 40
+SMALL = $(IFM2WEB) -z 3 -s 14
+
 # Distribution stuff.
-EXTRA_DIST = $(DOCFILES) examples images templates
+EXTRA_DIST = $(DOCFILES) examples templates
 IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
 IFMOPTS = -I $(top_srcdir)/lib -s version="$(VERSION)" -S helvetica
 docdir = $(prefix)/doc
@@ -334,7 +344,7 @@ uninstall-am: uninstall-info-am
 
 # User guide.
 
-.PHONY: html latex
+.PHONY: html latex images
 
 guide: html
 
@@ -350,12 +360,22 @@ linkcheck: setup conf.py
 	$(SPHINX) -b $@ $(srcdir) $(sphinxdir)
 
 setup:
-	@ mkdir -p $(htmldir) $(latexdir) $(sphinxdir)
-	@ cd $(srcdir)/images; $(MAKE) -s
+	@ mkdir -p $(htmldir) $(latexdir) $(sphinxdir) $(imagedir)
+	@ $(MAKE) -s images
 	@ for file in conf.py images/logo.png; do			\
 	    path=$(builddir)/$$file;					\
 	    test -f $$path || ln -s $(srcdir)/$$file $$path;		\
 	done
+
+images: $(PNG)
+
+$(imagedir)/%.png: $(exampledir)/%.ifm
+	@ echo creating $@
+	$(LARGE) -o $@ $<
+
+$(imagedir)/logo.png: $(exampledir)/logo.ifm
+	@ echo creating $@
+	$(SMALL) -o $@ $<
 
 # Installation stuff.
 
