Remove demos dir.

--- a/Makefile.in
+++ b/Makefile.in
@@ -174,7 +174,7 @@ target_alias = @target_alias@
 tkifm = @tkifm@
 AUTOMAKE_OPTIONS = check-news
 ACLOCAL_AMFLAGS = -I etc
-SUBDIRS = $(subdirs) fig src lib doc man progs demos tests
+SUBDIRS = $(subdirs) fig src lib doc man progs tests
 EXTRA_DIST = COPYING.DOC TO-DO
 EXTRA_DIRS = etc contrib win32
 IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
