--- a/win32/Makefile
+++ b/win32/Makefile
@@ -4,7 +4,6 @@ TOPDIR = ..
 SRCDIR = $(TOPDIR)/src
 LIBDIR = $(TOPDIR)/lib
 DOCDIR = $(TOPDIR)/doc
-MAPDIR = $(TOPDIR)/demos
 PROGDIR = $(TOPDIR)/progs
 
 ZIPDIR = ifm
@@ -15,7 +14,6 @@ DLL = /bin/cygwin1.dll
 PROGS = $(PROGDIR)/*.pl
 DOCS  = $(DOCDIR)/html
 LIBS  = $(LIBDIR)/*.ifm $(LIBDIR)/ifm-pro.ps $(LIBDIR)/ifm-rgb.txt
-MAPS  = $(MAPDIR)/*.ifm $(MAPDIR)/README
 
 CTEXT = $(PROGDIR)/ctext/ctext.tcl
 TKIFM = $(PROGDIR)/tkifm.tcl
@@ -24,7 +22,7 @@ all: test
 
 test:; $(MAKE) IFM=ifm DLL="" zip
 
-zip: init readme progs docs lib demos final
+zip: init readme progs docs lib final
 
 init:;	rm -rf $(ZIPDIR)
 	mkdir $(ZIPDIR)
@@ -42,10 +40,6 @@ docs:;	- mkdir $(ZIPDIR)/docs
 	- cp -r $(DOCS)/* $(ZIPDIR)/docs
 
 lib:;	cp $(LIBS) $(ZIPDIR)
-
-demos:;	- mkdir $(ZIPDIR)/demos
-	cp $(MAPS) $(ZIPDIR)/demos
-	- mv $(ZIPDIR)/demos/README $(ZIPDIR)/demos/README.txt
 
 final:;	chmod -R a+w $(ZIPDIR)
 
