--- a/progs/Makefile.in
+++ b/progs/Makefile.in
@@ -154,7 +154,7 @@ target_alias = @target_alias@
 tkifm = @tkifm@
 bin_SCRIPTS = @tkifm@ @ifm2dev@ @ifm2tex@ @ifm2web@ @scr2ifm@
 EXTRA_SCRIPTS = tkifm ifm2dev ifm2tex ifm2web scr2ifm
-EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl scr2ifm.pl
+EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl ifm2web.pl scr2ifm.pl
 CLEANFILES = $(bin_SCRIPTS) *.tex *.aux *.dvi *.lo* *.eps *.ps *.toc
 docdir = $(prefix)/doc
 ifmdocdir = $(docdir)/ifm
