--- a/progs/Makefile.am
+++ b/progs/Makefile.am
@@ -4,7 +4,7 @@ bin_SCRIPTS = @tkifm@ @ifm2dev@ @ifm2tex@ @ifm2web@ @scr2ifm@
 
 EXTRA_SCRIPTS = tkifm ifm2dev ifm2tex ifm2web scr2ifm
 
-EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl scr2ifm.pl
+EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl ifm2web.pl scr2ifm.pl
 
 tkifm: ctext/ctext.tcl tkifm.tcl
 	echo '#! $(WISH) -f' > $@
