--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -165,7 +165,7 @@ IFM = $(top_builddir)/src/ifm
 TKIFM = $(top_builddir)/progs/tkifm
 TESTS = $(SRCS:.ifm=.test)
 EXP = $(SRCS:.ifm=.exp)
-EXTRA_DIST = README Maketest $(TESTS) $(EXP) $(SRCS)
+EXTRA_DIST = README Maketests $(TESTS) $(EXP) $(SRCS)
 SUFFIXES = .ifm .test .task .prof .tk .ps .rec
 CLEANFILES = *.out
 docdir = $(prefix)/doc
