--- a/Makefile.in
+++ b/Makefile.in
@@ -176,7 +176,7 @@ AUTOMAKE_OPTIONS = check-news
 ACLOCAL_AMFLAGS = -I etc
 SUBDIRS = $(subdirs) fig src lib doc man progs tests
 EXTRA_DIST = COPYING.DOC TO-DO
-EXTRA_DIRS = etc contrib win32
+EXTRA_DIRS = etc contrib
 docdir = $(prefix)/doc
 ifmdocdir = $(docdir)/ifm
 
