--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -156,10 +156,9 @@ imagedir = $(srcdir)/images
 exampledir = $(srcdir)/examples
 
 # Documentation sources.
-DOCFILES = changes.rst editors.rst example.rst ifm2dev.rst ifm2tex.rst	  \
-ifm2web.rst index.rst install.rst intro.rst language.rst license.rst	  \
-links.rst maps.rst scr2ifm.rst solving.rst thanks.rst tkifm.rst tools.rst \
-usage.rst
+DOCFILES = changes.rst editors.rst example.rst ifm2dev.rst ifm2tex.rst	    \
+ifm2web.rst index.rst intro.rst language.rst license.rst links.rst maps.rst \
+scr2ifm.rst solving.rst thanks.rst tkifm.rst tools.rst usage.rst
 
 
 # Programs.
