--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,7 +11,7 @@ exampledir = $(srcdir)/examples
 
 DOCFILES = changes.rst editors.rst example.rst ifm2dev.rst ifm2tex.rst	    \
 ifm2web.rst index.rst intro.rst language.rst license.rst links.rst maps.rst \
-scr2ifm.rst solving.rst thanks.rst tkifm.rst tools.rst usage.rst
+scr2ifm.rst solving.rst thanks.rst tkifm.rst tools.rst usage.rst vars.rst
 
 # Programs.
 
