--- a/Makefile.in
+++ b/Makefile.in
@@ -598,11 +598,7 @@ uninstall-info: uninstall-info-recursive
 	uninstall-info-am
 
 
-dist-hook: dist-prepare dist-extra dist-config dist-header dist-touch \
-	   dist-cleanup
-
-dist-prepare:
-	cd $(top_srcdir)/win32; $(MAKE) clean
+dist-hook: dist-extra dist-config dist-header dist-touch dist-cleanup
 
 dist-config:
 	rm -f $(distdir)/etc/*header*
