--- a/doc/examples/Makefile
+++ b/doc/examples/Makefile
@@ -1,9 +1,15 @@
 # Makefile for ruins demo.
 
-all: ruins.scr
+all: ruins-items.txt ruins-tasks.txt ruins-rec.txt
 
-ruins.scr: ruins.z5 ruins.rec
-	rec2scr -o $@ -r ruins.rec ruins.z5
+%.scr: ruins.z5 %.rec
+	rec2scr -o $@ -r $*.rec ruins.z5
 
-ruins.rec: ruins.ifm
+%-rec.txt: %.ifm
 	ifm -t -f rec -o $@ $<
+
+%-items.txt: %.ifm
+	ifm -i -o $@ $<
+
+%-tasks.txt: %.ifm
+	ifm -t -o $@ $<
