--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -153,7 +153,7 @@ latex_font_size = '11pt'
 # Grouping the document tree into LaTeX files. List of tuples (source start
 # file, target name, title, author, document class [howto/manual]).
 latex_documents = [
-  ('index', 'ifm.tex', 'IFM Documentation', 'Glenn Hutchings', 'manual'),
+  ('contents', 'ifm.tex', 'IFM Documentation', 'Glenn Hutchings', 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the
