--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -77,6 +77,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+GREP = @GREP@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -108,9 +109,8 @@ VARS_LIBS = @VARS_LIBS@
 VERSION = @VERSION@
 WISH = @WISH@
 YACC = @YACC@
+YFLAGS = @YFLAGS@
 ac_ct_CC = @ac_ct_CC@
-ac_ct_RANLIB = @ac_ct_RANLIB@
-ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__include = @am__include@
@@ -125,12 +125,16 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+datarootdir = @datarootdir@
+docdir = $(prefix)/doc
+dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
+htmldir = @htmldir@
 ifm2dev = @ifm2dev@
 ifm2tex = @ifm2tex@
 ifm2web = @ifm2web@
@@ -139,12 +143,15 @@ infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
+pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+psdir = @psdir@
 sbindir = @sbindir@
 scr2ifm = @scr2ifm@
 sharedstatedir = @sharedstatedir@
@@ -158,9 +165,8 @@ MAN_TITLE = Interactive Fiction Mapper
 IFM = $(top_builddir)/src/ifm
 MANPAGE = ifm.1
 man_MANS = $(MANPAGE)
-EXTRA_DIST = ifm.man
+EXTRA_DIST = ifm.man ifm.1
 TMP = /tmp/ifm.tmp
-docdir = $(prefix)/doc
 ifmdocdir = $(docdir)/ifm
 
 # Show recent source changes.
@@ -376,7 +382,7 @@ $(MANPAGE): ifm.man
 	chmod u+w $(TMP)
 	echo "[SEE ALSO]" >> $(TMP)
 	echo ".IP $(ifmdocdir)/index.html" >> $(TMP)
-	echo "Online documentation" >> $(TMP)
+	echo "IFM manual" >> $(TMP)
 	$(HELP2MAN) -o $@ -i $(TMP) $(IFM)
 	rm -f $(TMP)
 
