--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -55,7 +55,7 @@ release = version
 today_fmt = '%B %d, %Y'
 
 # List of documents that shouldn't be included in the build.
-#unused_docs = []
+unused_docs = ["refs"]
 
 # List of directories, relative to source directories, that shouldn't be
 # searched for source files.
