--- a/fig/Makefile.in
+++ b/fig/Makefile.in
@@ -43,8 +43,7 @@ DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/etc/Makefile.common
 subdir = fig
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/etc/library.m4 \
-	$(top_srcdir)/etc/version.m4 $(top_srcdir)/configure.in
+am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
@@ -122,9 +121,6 @@ RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
-VARS_CFLAGS = @VARS_CFLAGS@
-VARS_CONFIG = @VARS_CONFIG@
-VARS_LIBS = @VARS_LIBS@
 VERSION = @VERSION@
 WISH = @WISH@
 YACC = @YACC@
@@ -168,7 +164,6 @@ program_transform_name = @program_transform_name@
 sbindir = @sbindir@
 scr2ifm = @scr2ifm@
 sharedstatedir = @sharedstatedir@
-subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tkifm = @tkifm@
@@ -179,7 +174,7 @@ libfig_a_SOURCES = $(SRCS) $(HDRS)
 EXTRA_DIST = fig-format.txt
 INCLUDES = $(VARS_CFLAGS)
 testfig_SOURCES = testfig.c
-testfig_LDFLAGS = $(VARS_LIBS)
+testfig_LDFLAGS = -L$(top_srcdir)/vars
 testfig_LDADD = libfig.a -lvars -lm
 CLEANFILES = test.fig* test.eps testfig
 docdir = $(prefix)/doc
