--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -44,8 +44,7 @@ DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	ifm-scan.c
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/etc/library.m4 \
-	$(top_srcdir)/etc/version.m4 $(top_srcdir)/configure.in
+am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
@@ -62,8 +61,7 @@ am__objects_2 = ifm-parse.$(OBJEXT) ifm-scan.$(OBJEXT)
 am__objects_3 =
 am_ifm_OBJECTS = $(am__objects_1) $(am__objects_2) $(am__objects_3)
 ifm_OBJECTS = $(am_ifm_OBJECTS)
-am__DEPENDENCIES_1 =
-ifm_DEPENDENCIES = $(am__DEPENDENCIES_1)
+ifm_DEPENDENCIES =
 DEFAULT_INCLUDES = -I. -I$(srcdir)
 depcomp = $(SHELL) $(top_srcdir)/etc/depcomp
 am__depfiles_maybe = depfiles
@@ -126,9 +124,6 @@ RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
-VARS_CFLAGS = @VARS_CFLAGS@
-VARS_CONFIG = @VARS_CONFIG@
-VARS_LIBS = @VARS_LIBS@
 VERSION = @VERSION@
 WISH = @WISH@
 YACC = @YACC@
@@ -172,7 +167,6 @@ program_transform_name = @program_transform_name@
 sbindir = @sbindir@
 scr2ifm = @scr2ifm@
 sharedstatedir = @sharedstatedir@
-subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tkifm = @tkifm@
@@ -189,8 +183,10 @@ ifm_SOURCES = $(SRCS) $(NOLINT_SRCS) $(HDRS)
 EXTRA_DIST = ifm-parse.c ifm-scan.c
 FIG_SRC = $(top_srcdir)/fig
 FIG_BIN = $(top_builddir)/fig
-ifm_LDFLAGS = -L$(FIG_BIN)
-ifm_LDADD = -lfig $(VARS_LIBS) @LIBS@
+VARS_SRC = $(top_srcdir)/vars
+VARS_BIN = $(top_builddir)/vars
+ifm_LDFLAGS = -L$(FIG_BIN) -L$(VARS_BIN)
+ifm_LDADD = -lfig -lvars -lm
 AM_YFLAGS = -d -v
 IFMPATH = $(pkgdatadir):.
 IFMDEFS = -DSYSINIT=\"ifm-init.ifm\" -DIFMPATH=\"$(IFMPATH)\" \
