--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,7 @@
 ## Automake template for IFM library files.
 
-STYLES = helvetica.ifm puzzle.ifm reckless.ifm special.ifm verbose.ifm
+STYLES = helvetica.ifm noshadow.ifm puzzle.ifm reckless.ifm special.ifm	\
+verbose.ifm
 
 LIBFILES = ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
 
