--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,7 +36,7 @@ IFMDEFS += -DIFMPATH=\"$(IFMPATH)\"
 IFMDEFS += -DPATHSEP=\":\"
 IFMDEFS += -DINITFILE=\"$(INITFILE)\"
 
-INCLUDES = -I$(FIG_SRC) $(VARS_CFLAGS) $(IFMDEFS)
+INCLUDES = -I$(FIG_SRC) -I$(VARS_SRC) $(IFMDEFS)
 
 $(bin_PROGRAMS): $(FIG_BIN)/libfig.a
 
