--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,11 +36,26 @@ IFMDEFS = -DIFMLIB=$(pkgdatadir)
 endif
 
 AM_CFLAGS = $(LOCAL_CFLAGS)
-AM_CPPFLAGS = -I$(FIG_SRC) -I$(VARS_SRC) $(IFMDEFS)
+AM_CPPFLAGS = -I$(FIG_SRC) -I$(VARS_SRC) $(IFMDEFS) -DHGVERSION="\"$(HGVERSION)\""
 
 $(bin_PROGRAMS): $(VARS_BIN)/libvars.a $(FIG_BIN)/libfig.a
 
 ifm-parse.h: ifm-parse.c
+
+# Mercurial version stamp.
+
+HGFILE = ifm-main.o
+HGCMD = hg -R $(top_srcdir) parents --template 'hgid: {node|short}'
+GREPCMD = grep node $(top_srcdir)/.hg_archival.txt
+HGVERSION := $(shell $(HGCMD) 2> /dev/null || $(GREPCMD) 2> /dev/null || true)
+
+$(HGFILE): stamp-hg
+
+stamp-hg: dummy
+	@ test -f $@ || touch $@
+	@ echo $(HGVERSION) | cmp -s $@ - || echo $(HGVERSION) > $@
+
+dummy: ;
 
 # Add lint support.
 
