Rename drivers to formats.  Add access functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,13 +4,13 @@ SUBDIRS = libfig libvars
 
 bin_PROGRAMS = ifm
 
-SRCS = ifm-dot.c ifm-driver.c ifm-fig.c ifm-main.c ifm-map.c ifm-path.c	\
+SRCS = ifm-dot.c ifm-fig.c ifm-format.c ifm-main.c ifm-map.c ifm-path.c	\
 ifm-ps.c ifm-raw.c ifm-rec.c ifm-task.c ifm-text.c ifm-tk.c ifm-util.c	\
 ifm-vars.c ifm-yaml.c
 
 NOLINT_SRCS = ifm-parse.y ifm-scan.l
 
-HDRS = ifm-dot.h ifm-driver.h ifm-fig.h ifm-main.h ifm-map.h ifm-parse.h \
+HDRS = ifm-dot.h ifm-fig.h ifm-format.h ifm-main.h ifm-map.h ifm-parse.h \
 ifm-path.h ifm-ps.h ifm-raw.h ifm-rec.h ifm-task.h ifm-text.h ifm-tk.h	 \
 ifm-util.h ifm-vars.h ifm-yaml.h
 
