--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -60,7 +60,7 @@ release = version
 today_fmt = '%B %d, %Y'
 
 # List of documents that shouldn't be included in the build.
-unused_docs = ["refs"]
+exclude_patterns = ["refs.rst"]
 
 # List of directories, relative to source directories, that shouldn't be
 # searched for source files.
@@ -80,7 +80,7 @@ pygments_style = 'sphinx'
 # The style sheet to use for HTML and HTML Help pages. A file of that name
 # must exist either in Sphinx' static/ path, or in one of the custom paths
 # given in html_static_path.
-html_style = 'ifm.css'
+#html_style = 'ifm.css'
 
 # The name for this set of Sphinx documents.  If None, it defaults to
 # "<project> v<release> documentation".
@@ -103,7 +103,7 @@ html_favicon = "static/logo.ico"
 # here, relative to this directory. They are copied after the builtin
 # static files, so a file named "default.css" will overwrite the builtin
 # "default.css".
-html_static_path = ['static']
+#html_static_path = ['static']
 
 # If not '', a 'Last updated on:' timestamp is inserted at every page bottom,
 # using the given strftime format.
